# realtime-whiteboard

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Whiteboard.tsx  index.css
frontend/src/components/: FrontendShape.tsx
frontend/src/components/ui/: DatabaseShape.tsx  LLMShape.tsx  ServerShape.tsx  UserShape.tsx
frontend/src/hooks/: useArchitectureAnalysis.ts  useOpenAIRealtime.ts  useRealtime.ts
projects/backend/: pyproject.toml
projects/backend/src/backend/: __init__.py  agent.py  main.py  mapping.py  stream_processor.py
projects/transcribe/: plan.md  pyproject.toml
projects/transcribe/src/transcribe/: agent.py  microphone.py  pipeline.py  service.py  voice.py
scripts/: microphone.py  microphone2.py  sample.m4a  test_transcribe.py
