[project]
name = "whiteboard"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[voice]>=0.2.10",
]

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
backend = { workspace = true }
transcribe = { workspace = true }

[tool.uv]
# no need to resolve for Windows:
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

# overrides
reportUnusedImport = "warning"
reportMissingTypeStubs = "warning"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    # flake8 rules (builtins, bugbear, copyright, simplify)
    "A", "B", "CPY", "SIM",
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
]
