[project]
name = "backend"
version = "0.1.0"
description = "Speech-to-whiteboard backend with OpenAI Agents SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "openai-agents>=0.0.8",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
