[project]
name = "transcribe"
version = "0.1.0"
description = "Transcription service for Whiteboard"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[voice]>=0.2.10"
]

[project.scripts]
transcribe-voice = "transcribe.voice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["A", "E", "F", "I", "N"]
